# docker-hdfs

./: .dockerignore  .gitignore  Dockerfile.debian  Dockerfile.ubuntu  Makefile  README.md  buildx.sh  docker-compose.yml
.github/workflows/: docker.yml
rootfs/: docker-entrypoint.sh
rootfs/etc/: krb5.conf
rootfs/etc/s6-overlay/s6-rc.d/datanode/: finish  run
rootfs/etc/s6-overlay/s6-rc.d/kadmind/: finish  run
rootfs/etc/s6-overlay/s6-rc.d/krb5kdc/: finish  run
rootfs/etc/s6-overlay/s6-rc.d/namenode/: finish  run
rootfs/etc/s6-overlay/s6-rc.d/namenode/dependencies.d/: krb5kdc
rootfs/etc/s6-overlay/scripts/: hdfs-common.sh
rootfs/opt/hadoop/etc/hadoop/: core-site.xml  hdfs-site.xml
scripts/: smoke-test.sh
scripts/conf/simple/: core-site.xml  hdfs-site.xml
tools/envtoxml/: .gitignore  Cargo.toml
tools/envtoxml/src/: main.rs
tools/envtoxml/tests/: integration.rs
