[package]
name = "envtoxml"
version = "0.1.0"
edition = "2021"
# Static env→XML config merger for the dyrnq/hdfs image.
# Replaces apache/ozone's envtoconf.py with a zero-runtime-dependency
# binary. See src/main.rs header for the full contract.

[dependencies]
# quick-xml is a pure-Rust, streaming XML reader/writer. It tokenizes
# the file into events (Start/End/Text/Comment/Whitespace/…) which we
# copy verbatim to the output, replacing only the <value> of a matched
# <property>. Because we never rebuild the tree, comments and
# whitespace survive byte-for-byte (verified — see tests/ and the
# issue #8 comment block in hdfs-site.xml). BytesText::new escapes
# XML-special characters on write, so injected values are safe.
quick-xml = "0.36"

[[bin]]
name = "envtoxml"
path = "src/main.rs"

[profile.release]
# Small static binary: the tool runs once at container start, so size
# matters more than peak throughput.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
